--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -415,26 +415,28 @@
   }
   .wrapper .icon:hover .tooltip.top {
     width: fit-content;
-    bottom: 20px;
-    left: 50px;
+    left: 14px;
   }
 
   .wrapper .icon:hover .tooltip.right {
-    top: 15px;
-    right: 48px;
+    top: 315px;
+    right: 4px;
   }
 
-  .wrapper .icon .tooltip.top::before {
-    content: " ";
-    position: absolute;
-    width: 0;
-    height: 0;
-  }
   .wrapper .icon .tooltip.right::before {
     content: " ";
     position: absolute;
-    width: 0;
-    height: 0;
+    width: 12px;
+    height: 12px;
+    background: orange;
+    bottom: -7px;
+    left: 58%;
+    transform: translateX(-50%) rotate(45deg);
+    z-index: 1;
+  }
+  .right {
+    position: absolute;
+    bottom: 49px !important;
   }
 }
 @media screen and (min-width: 580px) and (max-width: 920px) {
