--- a/src/components/cartCompo/cart.css
+++ b/src/components/cartCompo/cart.css
@@ -70,7 +70,6 @@
 }
 .cartControl {
   margin-top: 50px;
-  background-color: pink;
   padding: 0px 15px;
   border-radius: 10px;
 }
@@ -80,7 +79,7 @@
   margin: 10px;
   border-radius: 5px;
   font-size: 20px;
-  background: transparent;
+  background: pink !important;
 }
 .incCart {
   background: none;
@@ -154,12 +153,6 @@
 
 /*---------product-----------*/
 @media screen and (min-width: 700px) and (max-width: 800px) {
-  .cartControl button {
-    width: 20px;
-    height: 20px;
-    margin: 10px;
-    font-size: 15px;
-  }
   .cart-items .cart-details h3 {
     font-size: 15px;
   }
@@ -180,12 +173,6 @@
   }
 }
 @media screen and (min-width: 550px) and (max-width: 700px) {
-  .cartControl button {
-    width: 20px;
-    height: 20px;
-    margin: 10px;
-    font-size: 15px;
-  }
   .cart-items .cart-details h3 {
     font-size: 15px;
   }
@@ -240,5 +227,9 @@
   }
   .cart-list .img {
     width: 100%;
+  }
+  .removeCart1 {
+    top: 10px;
+    position: absolute;
   }
 }
