--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -42,18 +42,45 @@
   color: rgb(207, 178, 105);
 }
 
-.icon button:focus {
-  color: #706fd3;
-  border: 2px solid #3158da;
-  box-shadow: 0px 0px 0px 1px rgb(58, 57, 110, green, blue);
-  animation: anim-shadow 0.3s forwards;
+.icon button::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  transition: all 0.4s;
 }
 
-@keyframes anim-shadow {
+.icon button:focus::before {
+  /* color: #706fd3;
+  border: 2px solid #3158da;
+  box-shadow: 0px 0px 0px 1px rgb(58, 57, 110, green, blue);
+  animation: anim-shadow 0.3s forwards; */
+  transform: scaleY(1.4) scaleX(1.6);
+  overflow: hidden;
+  opacity: 0;
+}
+
+.icon button:focus {
+  transform: translateY(-10px);
+  /*h v b c*/
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+}
+
+.icon button:active {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.9);
+}
+
+/* @keyframes anim-shadow {
   100% {
     box-shadow: 0px 0px 50px 20px rgba(112, 111, 211, 0.1);
   }
-}
+} */
 /* .header-title{
     background: url(/ForUltra-B/images/skincare.banner.jpg);
     color: #A63535;
