--- a/src/components/cartCompo/cart.css
+++ b/src/components/cartCompo/cart.css
@@ -31,7 +31,7 @@
   width: 30%;
   margin-top: 30px;
   margin-left: 30px;
-  height: 130px;
+  height: 200px;
 }
 .cart-list {
   background: white;
@@ -52,14 +52,14 @@
   margin-top: 20px;
 }
 .cart-items .cart-details h4 {
-  font-size: 15px;
+  font-size: 25px;
   font-weight: 400;
   margin-top: 50px;
   color: grey;
 }
-.cart-items h4 span {
+.cart-items span {
+  font-size: 30px;
   color: #e94560;
-  margin-left: 20px;
   font-weight: 500;
 }
 .removeCart {
@@ -111,6 +111,16 @@
   margin-top: 30px;
   height: 130px;
 }
+.check {
+  align-items: center;
+  padding: 20px 107px;
+}
+.checkOut {
+  background-color: #e94560 !important;
+  padding: 5px 30px;
+  border-radius: 10px;
+  color: white !important;
+}
 
 /*---------product-----------*/
 .productcart {
@@ -152,7 +162,24 @@
 } */
 
 /*---------product-----------*/
+@media screen and (min-width: 800px) and (max-width: 950px) {
+  .check {
+    padding: 20px 80px;
+  }
+  .checkOut {
+    font-size: 15px;
+    background-color: #e94560 !important;
+    padding: 5px 20px;
+  }
+}
 @media screen and (min-width: 700px) and (max-width: 800px) {
+  .check {
+    padding: 20px 55px;
+  }
+  .checkOut {
+    font-size: 13px;
+    padding: 0px 15px;
+  }
   .cart-items .cart-details h3 {
     font-size: 15px;
   }
@@ -173,14 +200,25 @@
   }
 }
 @media screen and (min-width: 550px) and (max-width: 700px) {
+  .check {
+    padding: 20px 40px;
+  }
+  .checkOut {
+    font-size: 13px;
+    padding: 0px 15px;
+  }
+  .cartControl {
+    margin-top: 50px;
+    padding: 0px;
+  }
   .cart-items .cart-details h3 {
     font-size: 15px;
   }
   .cart-items .cart-details h4 {
     font-size: 10px;
   }
-  .cart-items h4 span {
-    margin-left: 10px;
+  .cart-items span {
+    font-size: 20px;
   }
   .cart-total h3 {
     font-size: 15px;
@@ -206,10 +244,10 @@
     margin-left: 18px;
   }
   .cart-total h3 {
-    font-size: 25px;
+    font-size: 30px;
   }
   .cart-total h4 {
-    font-size: 20px;
+    font-size: 25px;
   }
   .cart-items .cart-total {
     margin-left: 0px;
@@ -220,10 +258,10 @@
     flex-direction: column;
   }
   .cart-items .cart-total {
-    width: 70%;
+    width: 90%;
     margin-top: 30px;
     margin-left: 30px;
-    height: 150px;
+    height: 250px;
   }
   .cart-list .img {
     width: 100%;
@@ -231,5 +269,18 @@
   .removeCart1 {
     top: 10px;
     position: absolute;
+  }
+  .cartControl {
+    margin-top: 0px;
+  }
+  .cart-total h2 {
+    font-size: 25px;
+  }
+  .check {
+    padding: 20px 130px;
+  }
+  .checkOut {
+    font-size: 20px;
+    padding: 10px 25px;
   }
 }
