--- a/src/components/homecomponents/homeproduct.css
+++ b/src/components/homecomponents/homeproduct.css
@@ -77,8 +77,8 @@ img {
 }
 
 .f-col button {
-  background-color: black;
-  color: #fff;
+  background-color: black !important;
+  color: #fff !important;
   margin-top: 1rem;
   font-size: 1rem;
   padding: 5px;
